# smio

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
aio-rs/: Cargo.toml
aio-rs/src/: lib.rs
aio-sys/: Cargo.toml
quill/: Cargo.toml
quill/aio-rs/src/: lib.rs
quill/aio-sys/src/: lib.rs
quill/src/: lib.rs
scribe/: Cargo.toml
scribe/src/: bookcase.rs  chapter.rs  lib.rs  main.rs  page.rs  scribe.rs  secretary.rs
src/: bookcase.rs  chapter.rs  constellation.rs  lib.rs  main.rs  page.rs  queue.rs
