[package]
name = "super_massive_io"
version = "0.1.0"
edition = "2021"


[dependencies]

# Local dependencies
aio-rs = { path = "./aio-rs" }

# External Dependencies
## Functional
indicatif = "0.17.8" 
rand_xoshiro = "0.6.0" # Hashing function for data creation
bytemuck = {version = "1.14.0", features = ["derive", "min_const_generics"] } # Convienent type transmutation
rand = "0.8.5"         # Psuedo-RNG via thread_rng
array-init = "2.1.0"   # Array initialization via iters and closures.
clap = "4.4.6"
typed-arena = "2.0.2"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"]}
serde_json = "1.0.121"
libc = "0.2.155"

# Errors and Logging
anyhow = "1.0.91"
log = "0.4"
fern = "0.7.0"
humantime = "2.1.0"

# Testing
serial_test = "2.0.0"  # Runs decorated tests serially
tempfile = "3.13.0"         # Easily create temp files

[workspace]
members = [
    "aio-sys",
    "aio-rs",
]
