[package]
name = "scribe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aio-rs = { path = "../aio-rs" }
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
rand_xoshiro = "0.6.0"
bincode = "1.3.3"
bitcode = "0.4.0"
rand = "0.8.5"
array-init = "2.1.0"
stacker = "0.1.15"
